--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,25 @@
         <activity android:name=".salonDetails" />
         <activity android:name=".updateDj" />
         <activity android:name=".stp2User" />
-        <activity android:name=".viewVenues"></activity>
+        <activity android:name=".viewVenues" />
+        <activity android:name=".viewDecor" />
+        <activity android:name=".viewSalons" />
+        <activity android:name=".viewCaterer" />
+        <activity android:name=".viewDesigners" />
+        <activity android:name=".viewDj" />
+        <activity android:name=".viewPhotographers" />
+        <activity android:name=".bookEvent" />
+        <activity android:name=".allOptions" />
+        <activity android:name=".viewVenueDetails" />
+        <activity android:name=".viewDesignerDetails" />
+        <activity android:name=".viewDjDetails" />
+        <activity android:name=".viewCaterersDetails" />
+        <activity android:name=".viewDecorDetails" />
+        <activity android:name=".viewPhotographerDetails" />
+        <activity android:name=".viewSalonDetails" />
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".user_home" />
+        <activity android:name=".view_book_event"></activity>
     </application>
 
 </manifest>
