--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,15 @@
         <activity android:name=".user_home" />
         <activity android:name=".view_book_event" />
         <activity android:name=".booked_list"></activity>
+        <activity android:name=".viewbookedCaterersDetails"/>
+        <activity android:name=".viewbookedDecorDetails"/>
+        <activity android:name=".viewbookedDjDetails"/>
+        <activity android:name=".viewbookedDesignerDetails"/>
+        <activity android:name=".viewbookedSalonDetails"/>
+        <activity android:name=".viewbookedPhotographerDetails"/>
+        <activity android:name=".viewbookedvenueDetails"/>
+
+
     </application>
 
 </manifest>
